style and logic update

--- a/src/app/features/buy/step-account-details/step-account-details.component.html
+++ b/src/app/features/buy/step-account-details/step-account-details.component.html
@@ -6,7 +6,7 @@
   <div class="account-details-method">
     <label class="input-label">Account Name</label>
     <div class="form-card">
-      <input class="account-input" [(ngModel)]="state.phoneNumber" placeholder="0x..." />
+      <input class="account-input" [(ngModel)]="state.phoneNumber" placeholder="xxxxxxxxxx" />
     </div>
   </div>
   <div class="account-details-method">
