--- a/src/app/features/buy/step-crypto-selector/step-crypto-selector.component.scss
+++ b/src/app/features/buy/step-crypto-selector/step-crypto-selector.component.scss
@@ -8,6 +8,10 @@
     margin-bottom: 20px;
   }
 
+  .form-card-error {
+    margin-bottom: 10px !important;
+  }
+
   .input-group {
     display: flex;
     align-items: center;
