--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,35 @@
 /* You can add global styles to this file, and also import other style files */
 
 .divider {
-    border-bottom: 1px solid #e0e0e0;
-  }
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.success-toast {
+  background: #4caf50 !important;
+  color: white !important;
+  font-family: 'Roboto';
+  font-weight: 600;
+  font-size: 14px;
+}
+
+.error-toast {
+  background: #f44336 !important;
+  color: white !important;
+  font-family: 'Roboto';
+  font-weight: 600;
+  font-size: 14px;
+}
+
+.warning-toast {
+  background: #ff9800 !important;
+  color: white !important;
+  font-family: 'Roboto';
+  font-weight: 600;
+  font-size: 14px;
+}
+
+.error-message {
+    font-size: 12px;
+    color: red;
+    margin-bottom: 25px;
+}
