validate input fields

--- a/src/app/features/buy/step-account-details/step-account-details.component.scss
+++ b/src/app/features/buy/step-account-details/step-account-details.component.scss
@@ -18,6 +18,10 @@
     margin-bottom: 20px;
   }
 
+  .form-card-error {
+    margin-bottom: 10px !important;
+  }
+
   .phone-form-card {
     background: #fff;
     border-radius: 12px;
