--- a/src/app/features/buy/step-verify-email/step-verify-email.component.scss
+++ b/src/app/features/buy/step-verify-email/step-verify-email.component.scss
@@ -17,6 +17,10 @@
       padding: 8px;
       margin-bottom: 20px;
     }
+
+    .form-card-error {
+      margin-bottom: 10px !important;
+    }
   
     .phone-form-card {
       background: #fff;
