--- a/src/app/features/buy/step-account-details/step-account-details.component.html
+++ b/src/app/features/buy/step-account-details/step-account-details.component.html
@@ -1,18 +1,42 @@
 <div class="account-details-form">
   <div class="account-details-header">
     <div class="account-details-header-title">Where do we pay you?</div>
-    <div class="account-details-header-subtitle">Please provide details about the account we should send money to:</div>
-  </div>
-  <div class="account-details-method">
-    <label class="input-label">Account Name</label>
-    <div class="form-card">
-      <input class="account-input" [(ngModel)]="state.phoneNumber" placeholder="xxxxxxxxxx" />
+    <div class="account-details-header-subtitle">
+      Please provide details about the account we should send money to:
     </div>
   </div>
   <div class="account-details-method">
+    <label class="input-label">Account Name</label>
+    <div class="formErrors.accountName ? form-card form-card-error : form-card">
+      <input
+        class="account-input"
+        [(ngModel)]="state.accountName"
+        placeholder="xxxxxxxxxx"
+      />
+    </div>
+    <div *ngIf="formErrors.accountName" class="error-message">
+      {{ formErrors.accountName }}
+    </div>
+  </div>
+
+  <div class="account-details-method">
     <label class="input-label">Phone Number</label>
-    <div class="phone-form-card">
-      <input class="phone-input"[(ngModel)]="state.phoneNumber" placeholder="0x..." />
+    <div
+      class="formErrors.phoneNumber ? phone-form-card form-card-error : phone-form-card"
+    >
+      <input
+        type="tel"
+        class="phone-input"
+        [(ngModel)]="state.phoneNumber"
+        maxlength="15"
+        placeholder="0x..."
+        (input)="handlePhoneInput($event)"
+        (keydown)="handlePhoneInput($event)"
+        (blur)="validatePhoneNumber(state.phoneNumber)"
+      />
+    </div>
+    <div *ngIf="formErrors.phoneNumber" class="error-message">
+      {{ formErrors.phoneNumber }}
     </div>
   </div>
 
@@ -24,14 +48,16 @@
       (click)="state.prevStep()"
       [customClass]="'prev-button'"
       [icon]="'arrow_backward'"
-      [iconPosition]="'before'">
+      [iconPosition]="'before'"
+    >
     </app-icon-button>
     <app-icon-button
       [text]="'Continue'"
-      (click)="validate()"
+      (click)="validateAndProceed()"
       [customClass]="'next-button'"
       [icon]="'arrow_forward'"
-      [iconPosition]="'after'">
+      [iconPosition]="'after'"
+    >
     </app-icon-button>
   </div>
   <p *ngIf="error">Invalid address</p>
